# task-pal

./: .gitignore  README.md  main.py  pyproject.toml
clippy/: app.py  config.py  face.py
clippy/chat/: chat_process.py  client.py  extractor.py  window.py
clippy/chat/ui/: chat.js  index.html  style.css
clippy/reminders/: scheduler.py  state.py
reminders/: default_config.json.example
taskpal/: __init__.py  app.py  config.py  face.py  monitor.py
taskpal/chat/: chat_process.py  client.py  extractor.py  history.py  window.py
taskpal/chat/ui/: chat.js  index.html  style.css
taskpal/reminders/: config_scheduler.py  escalator.py  scheduler.py  skincare_scheduler.py  state.py  streak.py
